refactor: 64 bit hashes for states computet with xor